--- a/index.html
+++ b/index.html
@@ -7,24 +7,72 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    const root = document.getElementById("root")
+    function MinutesToHours() {
+        const [amount, setAmount] = React.useState();
+       const [inverted,setInverted] = React.useState(false);
+       const onChange = (event) => {
+            setAmount(event.target.value)
+       };
+       const reset = () => {
+           setAmount()
+       }
+       const onFlip = () => {
+           reset();
+           setInverted(current => !current)
+        }
+       return (
+        <div>
+            <div>
+                <label htmlFor="minutes">Minutes</label>
+                <input 
+                    value = {inverted ? amount*60 : amount} 
+                    id="minutes" 
+                    placeholder="Minutes" 
+                    type="number" 
+                    onChange={onChange} 
+                    disabled={inverted} 
+                />
+            </div>
+            <div>
+                <label htmlFor="hours">Hours</label>
+                
+                <input 
+                    value = {inverted ? amount : Math.round(amount / 60)/*Math.roud():반 올림*/} 
+                    id="hours" 
+                    placeholder="Hours" 
+                    type="number" 
+                    onChange={onChange}
+                    disabled={!inverted}
+                />
+            </div>
+            <button onClick={reset}>Reset</button>
+            <button onClick={onFlip}>{inverted ? "Turn back" : "Invert"}</button>
+        </div>
+       )
+   }
+   function KmToMiles() {
+       return <h3>KM 2 M</h3>
+   }
    function App() {
-       //const number = [1,2];
-       //const [a,b] = number;//a = 1,b = 2
-       let [counter, setCounter] = React.useState(0);
-       //[변수,함수] = useState()
-       const onClick = () => {
-            // setCounter(counter + 1)
-            setCounter((current) => current + 1)
+       const [index,setIndex] = React.useState(0)
+       const onSelect = (event) => {
+           setIndex(event.target.value)
        }
        return (
-           <div>
-            <h3>Total clicks: {counter}</h3>
-            <button onClick={onClick}>Click me</button>
+        <div>
+            <h1>Super Converter</h1>
+            <select value={index} onChange={onSelect}>
+                <option value = "0">Minutes & Hours</option>
+                <option value = "1">Km & Miles</option>
+            </select>
+            <hr />
+            { index === "0" ? <MinutesToHours /> : null}
+            { index === "1" ? <KmToMiles /> : null}
             </div>
        )
    }
-    ReactDOM.render(<App />,root)
+   const root = document.getElementById("root")
+   ReactDOM.render(<App />,root)
 </script>
 
 </html>
