--- a/index.html
+++ b/index.html
@@ -3,72 +3,48 @@
 <body>
     <div id="root"></div>
 </body>
-<script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+<script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    function MinutesToHours() {
-        const [amount, setAmount] = React.useState();
-       const [inverted,setInverted] = React.useState(false);
-       const onChange = (event) => {
-            setAmount(event.target.value)
-       };
-       const reset = () => {
-           setAmount()
-       }
-       const onFlip = () => {
-           reset();
-           setInverted(current => !current)
-        }
+   function Btn({text , /*onClick,*/fontSize=12}) {
+       console.log(text, " was render")
        return (
-        <div>
-            <div>
-                <label htmlFor="minutes">Minutes</label>
-                <input 
-                    value = {inverted ? amount*60 : amount} 
-                    id="minutes" 
-                    placeholder="Minutes" 
-                    type="number" 
-                    onChange={onChange} 
-                    disabled={inverted} 
-                />
-            </div>
-            <div>
-                <label htmlFor="hours">Hours</label>
-                
-                <input 
-                    value = {inverted ? amount : Math.round(amount / 60)/*Math.roud():반 올림*/} 
-                    id="hours" 
-                    placeholder="Hours" 
-                    type="number" 
-                    onChange={onChange}
-                    disabled={!inverted}
-                />
-            </div>
-            <button onClick={reset}>Reset</button>
-            <button onClick={onFlip}>{inverted ? "Turn back" : "Invert"}</button>
-        </div>
-       )
-   }
-   function KmToMiles() {
-       return <h3>KM 2 M</h3>
-   }
+    
+            <button
+            // onClick={onClick}
+            style={{
+                backgroundColor:"tomato",
+                color:"white",
+                padding:"10px 20px",
+                border:0,
+                borderRadius:10,
+                fontSize
+            }}
+            >
+            {text}
+            </button>   
+  
+        )
+    }
+    //prop 값이 변화하는것만 기억해서 render해줌
+    // const MemorizedBtn = React.memo(Btn)
+    //prop값의 여부 & type 체크
+    Btn.propTypes = {
+        text: PropTypes.string.isRequired,
+        fontSize: PropTypes.number,
+    };
    function App() {
-       const [index,setIndex] = React.useState(0)
-       const onSelect = (event) => {
-           setIndex(event.target.value)
+       const [value,setValue] = React.useState("Save Change")
+       const changeValue = () => {
+           setValue("Revert Change")
        }
        return (
-        <div>
-            <h1>Super Converter</h1>
-            <select value={index} onChange={onSelect}>
-                <option value = "0">Minutes & Hours</option>
-                <option value = "1">Km & Miles</option>
-            </select>
-            <hr />
-            { index === "0" ? <MinutesToHours /> : null}
-            { index === "1" ? <KmToMiles /> : null}
-            </div>
+           <div>
+            <Btn text={value} fontSize={18} /*onClick={changeValue}*/ />
+            <Btn text="Continue"/>
+           </div>
        )
    }
    const root = document.getElementById("root")
